# esp32-sms-forwarder

./: .gitignore  CMakeLists.txt  README.md  nvs_config.csv  sdkconfig.defaults
.github/workflows/: build.yml
components/app_core/: CMakeLists.txt  config.c  utils.c
components/app_core/include/: app_events.h  config.h  utils.h
components/modem_driver/: CMakeLists.txt  modem.c  pdu_codec.c  sms.c
components/modem_driver/include/: modem.h  pdu_codec.h  sms.h
components/network_manager/: CMakeLists.txt  wifi_mgr.c
components/network_manager/include/: wifi_config.h  wifi_mgr.h
components/notification/: CMakeLists.txt  push.c  smtp_client.c
components/notification/include/: push.h  smtp_client.h
components/web_server/: CMakeLists.txt  web_server.c
components/web_server/include/: web_server.h
main/: CMakeLists.txt  main.c
scripts/: merge_factory_bin.py  monitor_logger.py  run_monitor_logger.sh
web/: .env.example  index.html  package-lock.json  package.json  vite.config.js
web/mock/: api.js
web/scripts/: analyze-bundle-size.js  gzip-index.js
web/src/: App.vue  main.js
web/src/api/: index.js
web/src/views/: ConfigView.vue  LogView.vue  ScheduleView.vue  StatusView.vue
